force-app/main/default/objects/Account/fields/HO_Corporate_Number__c.field-meta.xml
<CustomField>
    <fullName>HO_Corporate_Number__c</fullName>
    <label>HO法人番号</label>
    <description>13桁の法人番号。重複判定の手がかり</description>
    <type>Text</type>
    <length>20</length>
</CustomField>