force-app/main/default/objects/Account/fields/HO_Prefecture__c.field-meta.xml
<CustomField>
    <fullName>HO_Prefecture__c</fullName>
    <label>HO都道府県</label>
    <description>所在地の都道府県（表記ゆれを含む自由入力）</description>
    <type>Text</type>
    <length>40</length>
</CustomField>