force-app/main/default/objects/Account/fields/HO_Seed_Key__c.field-meta.xml
<CustomField>
    <fullName>HO_Seed_Key__c</fullName>
    <label>HOシードキー</label>
    <description>ハンズオン用テストデータの識別キー（再生成・差分比較に使用）</description>
    <type>Text</type>
    <length>40</length>
    <externalId>true</externalId>
    <unique>true</unique>
</CustomField>